--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+# Pico CMS stuff
 composer.lock
 composer.phar
 vendor/twig/twig/doc/*
 vendor/twig/twig/ext/*
 vendor/twig/twig/test/*
+
+# Our stuff
+themes/codebreu/css/style.css
