--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Our stuff
+themes/codebreu/css/*.css
+
 # Pico CMS stuff
 composer.lock
 composer.phar
@@ -5,5 +8,41 @@ vendor/twig/twig/doc/*
 vendor/twig/twig/ext/*
 vendor/twig/twig/test/*
 
-# Our stuff
-themes/codebreu/css/style.css
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
